# ReSourcer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  ci.sh  dev.sh  docker-compose.yml  update.sh
.github/workflows/: ios.yml  release.yml  server.yml  web.yml
E-ink/: settings.gradle.kts
E-ink/app/: build.gradle.kts  proguard-rules.pro
app/.fvm/: flutter_sdk
app/flutter/: README.md  pubspec.yaml
config/: app.json  dependencies.json  presets.json
deploy/: re-sourcer.service  setup.sh
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: API.md  PIXIV_UGOIRA_DOWNLOAD.md  REFACTOR-RELATIVE-PATHS.md  database.md  systemd-service.md
flutter/: pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
iOS/ReSourcer/: Info.plist  ReSourcer-Bridging-Header.h
iOS/ReSourcer.xcodeproj/: project.pbxproj
ops/: setup.sh
server/: Cargo.toml  build.rs
server/config/: app.json  dependencies.json
server/src/: database.rs  logger.rs  main.rs  static_files.rs  tools.rs  updater.rs
server/src/auth/: middleware.rs  mod.rs
server/src/browser/: browse.rs  mod.rs
server/src/config_api/: credentials.rs  download_config.rs  migrate.rs  mod.rs  models.rs  presets.rs  sources.rs  state.rs  storage.rs
server/src/file/: info.rs  models.rs  move_file.rs  rename.rs  utils.rs
server/src/folder/: create.rs  list.rs  mod.rs  models.rs  reorder.rs  utils.rs
server/src/indexer/: fingerprint.rs  handlers.rs  mod.rs  models.rs  scanner.rs  storage.rs
server/src/metrics/: collector.rs  handlers.rs  mod.rs  models.rs  storage.rs
server/src/playlist/: handlers.rs  mod.rs  models.rs  storage.rs
server/src/preview/: content.rs  files.rs  mod.rs  models.rs  thumbnail.rs  utils.rs
server/src/tag/: handlers.rs  mod.rs  models.rs  storage.rs
server/src/transfer/: mod.rs
server/src/transfer/download/: detector.rs  mod.rs  models.rs  storage.rs  task.rs  task_manager.rs
server/src/transfer/download/auth/: mod.rs  pixiv.rs  x.rs
server/src/transfer/download/downloaders/: ytdlp.rs
server/src/transfer/upload/: mod.rs  models.rs  storage.rs  task.rs  task_manager.rs
server/static/: index.html  login.html  material-icons.css
server/static/classifier/: app.js  index.html
server/static/downloader/: index.html
server/static/gallery/: app.js  index.html
src/: config.rs  handlers.rs  main.rs  static_files.rs
src/auth/: middleware.rs  mod.rs
src/browser/: browse.rs  create.rs
src/classifier/: config.rs  handlers.rs  mod.rs  models.rs
src/config_api/: download_config.rs  mod.rs  models.rs  sources.rs  storage.rs
src/downloader/: README.md  config.rs  (+6 more)
static/: app.js  common-i18n.js  i18n.js  index.html  login.html
tray/: download-binaries.sh  package.json
tray/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tray/src-tauri/icons/: icon.icns
tray/src-tauri/src/: main.rs
web/: .dockerignore  Dockerfile  auth.js  config.js  docker-compose.yml  docker-entrypoint.sh  index.html  login.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+292 files in other folders)
