[package]
name = "Toolkit-ReClassifier"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
percent-encoding = "2.3"
open = "5.0"
rust-embed = { version = "8.0", features = ["debug-embed"] }
