[package]
name = "re-sourcer"
version = "0.2.7"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
percent-encoding = "2.3"
open = "5.0"
rust-embed = { version = "8.0", features = ["debug-embed"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
image = "0.24"
gif = "0.12"
qrcode = "0.14"
dirs = "5.0"
env_logger = "0.11.8"
