[package]
name = "re-sourcer"
version = "0.3.10-beta"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
zip = "0.6"
image = "0.24"
gif = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
mupdf = "0.6"
colored = "2"
walkdir = "2"
